k8s_manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dua-auth-ingress
  namespace: dua
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: duaauth.devgauss.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dua-auth-service
                port:
                  number: 80
